--- a/AnimeHubClient/Shared/AnimeCard.razor
+++ b/AnimeHubClient/Shared/AnimeCard.razor
@@ -7,7 +7,7 @@
 
     <div class="card-body">
         <a href="anime/@Anime.Id" class="text-decoration-none">
-            <h6 class="card-title fw-bold text-truncate text-muted">@Anime.Title</h6>
+            <h6 class="card-title fw-bold text-muted anime-title">@Anime.Title</h6>
         </a>
     </div>
 </div>
