--- a/AnimeHubClient/Layout/NavMenu.razor
+++ b/AnimeHubClient/Layout/NavMenu.razor
@@ -24,7 +24,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Anime
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="anime-catalog">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Catalog
+            </NavLink>
+        </div>
     </nav>
 </div>
 
