--- a/AnimeHubClient/Pages/Home.razor
+++ b/AnimeHubClient/Pages/Home.razor
@@ -72,7 +72,7 @@
             <div class="col-12 text-center">
                 <h3 class="fw-bold mb-4">Browse by Genre</h3>
             </div>
-            <div class="col-12">
+            <div class="col-12 mb-3">
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-3 justify-content-center">
                     @if (Genres != null && Genres.Any())
                     {
