--- a/AnimeHubClient/Layout/NavMenu.razor
+++ b/AnimeHubClient/Layout/NavMenu.razor
@@ -1,44 +1,40 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">AnimeHub</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+﻿<nav class="navbar navbar-expand-md navbar-dark bg-dark shadow-sm fixed-top">
+    <div class="container-fluid container-xl align-items-center">
+
+        <a class="navbar-brand fw-bold fs-4" href="/">AnimeHub</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
+        <div class="collapse navbar-collapse align-items-center" id="navbarNav">
+
+            <ul class="navbar-nav mx-auto align-items-center my-0 py-0">
+                @* <li class="nav-item">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
+                </li> *@
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="anime-catalog">Catalog</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="anime">Animes</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="category">Categories</NavLink>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav align-items-center my-0 py-0">
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="search">Search</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="login">Login</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="btn btn-primary ms-2" href="signup">Sign Up</NavLink>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="category">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Category
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="anime">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Anime
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="anime-catalog">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Catalog
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+</nav>
