--- a/AnimeHubClient/_Imports.razor
+++ b/AnimeHubClient/_Imports.razor
@@ -14,4 +14,5 @@
 @using AnimeHub.Shared.Models.Dtos.Genre
 @using MudBlazor
 @using MudBlazor.Services
+@using MudBlazor.Utilities
 @using AnimeHubClient.Shared
