--- a/AnimeHubClient/Shared/ConfirmationDialog.razor
+++ b/AnimeHubClient/Shared/ConfirmationDialog.razor
@@ -5,7 +5,7 @@
         <MudText>@ContentText</MudText>
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Secondary" OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Error" OnClick="Cancel">Cancel</MudButton>
         <MudButton Color="Color.Primary" OnClick="Confirm">@ButtonText</MudButton>
     </DialogActions>
 </MudDialog>
