--- a/AnimeHubClient/Pages/Category/CategoryList.razor
+++ b/AnimeHubClient/Pages/Category/CategoryList.razor
@@ -21,7 +21,7 @@ else
         </div>
         <div class="card-body p-4">
             <div class="col-12 text-end">
-                <a href="category/create" class="btn btn-secondary"><i class="bi bi-plus-square"></i> Add New Category</a>
+                <MudButton Href="category/create" StartIcon="@Icons.Material.Filled.AddTask" Variant="Variant.Filled" Color="Color.Primary">Add New Category</MudButton>
             </div>
         </div>
         @if (Categories != null && Categories.Any())
@@ -41,8 +41,8 @@ else
                                 @category.Name
                             </td>
                             <td>
-                                <a href="@($"category/update/{category.Id}")" class="btn btn-primary btn-sm"><i class="bi bi-pencil-square"></i> Edit</a>
-                                <button class="btn btn-danger btn-sm" @onclick="() => DeleteCategory(category.Id)"><i class="bi bi-trash"></i> Delete</button>
+                                <MudButton Href="@($"category/update/{category.Id}")" StartIcon="@Icons.Material.Filled.EditNote" Variant="Variant.Filled" Color="Color.Primary">Edit</MudButton>
+                                <MudButton @onclick="() => DeleteCategory(category.Id)" StartIcon="@Icons.Material.Filled.Delete" Variant="Variant.Filled" Color="Color.Error">Delete</MudButton>
                             </td>
                         </tr>
                     }
