--- a/AnimeHubClient/Pages/Category/CategoryUpsert.razor
+++ b/AnimeHubClient/Pages/Category/CategoryUpsert.razor
@@ -5,9 +5,10 @@
 @inject NavigationManager Navigation
 @inject ISnackbar Snackbar
 
-@if (IsProcessing)
+@if (IsLoading)
 {
-    <p><em>Loading...</em></p>
+    <div class="py-4 text-center"><MudProgressCircular Indeterminate="true" /></div>
+
 }
 else
 {
@@ -31,14 +32,10 @@ else
                     </div>
                     <div class="row mt-3">
                         <div class="col-6 col-md-3">
-                            <button type="submit" class="btn btn-primary form-control" disabled="@IsProcessing">
-                                <i class="bi bi-bookmark-check"></i> @(Id > 0 ? "Update" : "Create")
-                            </button>
+                            <MudButton ButtonType="ButtonType.Submit" StartIcon="@Icons.Material.Filled.LibraryAddCheck" Variant="Variant.Filled" Color="Color.Primary" Disabled="@IsLoading">@(Id > 0 ? "Update" : "Create")</MudButton>
                         </div>
                         <div class="col-6 col-md-3">
-                            <a href="category" class="btn btn-secondary form-control" disabled="@IsProcessing">
-                                <i class="bi bi-box-arrow-in-left"></i> Back to List
-                            </a>
+                            <MudButton Href="category" StartIcon="@Icons.Material.Filled.ArrowCircleLeft" Variant="Variant.Filled" Color="Color.Default" Disabled="@IsLoading">Back to List</MudButton>
                         </div>
                     </div>
                 </div>
@@ -54,14 +51,14 @@ else
     // Single form model, can be either Create or Update DTO
     private CategoryUpdateDto Category { get; set; } = new();
 
-    private bool IsProcessing { get; set; } = true;
+    private bool IsLoading { get; set; } = true;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
             await LoadCategory();
-            IsProcessing = false;
+            IsLoading = false;
             StateHasChanged();
         }
     }
@@ -81,7 +78,7 @@ else
 
     private async Task UpsertCategory()
     {
-        IsProcessing = true;
+        IsLoading = true;
         if (Id == 0)
         {
             // Create
@@ -94,7 +91,7 @@ else
             await Http.PutAsJsonAsync($"api/category/{Category.Id}", Category);
             Snackbar.Add("Category updated successfully.", Severity.Success);
         }
-        IsProcessing = false;
+        IsLoading = false;
         Navigation.NavigateTo("category");
     }
 }
