--- a/AnimeHubClient/Layout/NavBar.razor
+++ b/AnimeHubClient/Layout/NavBar.razor
@@ -1,8 +1,28 @@
-﻿<nav class="navbar navbar-expand-md navbar-dark bg-dark shadow-sm py-3">
-    <div class="container-fluid">
+﻿@inject HttpClient Http
+
+<nav class="navbar navbar-expand-md navbar-dark shadow-sm py-3">
+    <div class="container">
+        <MudMenu Icon="@Icons.Material.Filled.MoreVert" Color="Color.Primary" PopoverClass="">
+            <MudMenuItem Label="Home" Href="/" />
+            <MudMenuItem Label="Catalog" Href="/anime-catalog" />
+            <MudMenuItem Label="Anime" Href="/anime" />
+            <MudMenu Label="Categories">
+                @foreach (var category in Categories)
+                {
+                    <MudMenuItem Label="@category.Name" />
+                }
+            </MudMenu>
+            <MudMenu Label="Genres">
+                @foreach (var genre in Genres)
+                {
+                    <MudMenuItem Label="@genre.Name" />
+                }
+            </MudMenu>
+            
+        </MudMenu>
         <!-- Brand -->
         <a class="navbar-brand d-flex align-items-center" href="/">
-            <img src="/images/Anime-Hub.svg" alt="AnimeHub" height="45" class="me-2" />
+            <img src="/images/Anime-Hub.svg" loading="lazy" decoding="async" alt="AnimeHub" height="45" class="me-2" />
         </a>
 
         <!-- Mobile Toggle -->
@@ -32,8 +52,24 @@
             <!-- Right Buttons -->
             <div class="d-flex align-items-center gap-2">
                 <NavLink href="/register" class="btn btn-outline-warning btn-sm px-3 fw-semibold">Register</NavLink>
+                @* <MudButton Href="/register" Variant="Variant.Outlined" Color="Color.Primary" Size="Size.Small" Class="btn-outline-warning">Register</MudButton> *@
                 <NavLink href="/login" class="btn btn-warning btn-sm text-dark px-3 fw-semibold">Login</NavLink>
+                @* <MudButton Href="/login" Variant="Variant.Filled" Color="Color.Primary" Style="color: black;" Size="Size.Small">Login</MudButton> *@
+
             </div>
         </div>
     </div>
 </nav>
+
+@code {
+    private List<CategoryReadDto>? Categories;
+    private List<GenreReadDto>? Genres;
+
+
+    protected override async Task OnInitializedAsync()
+    {
+        Categories = await Http.GetFromJsonAsync<List<CategoryReadDto>>("api/category");
+        Genres = await Http.GetFromJsonAsync<List<GenreReadDto>>("api/genre");
+
+    }
+}
