--- a/AnimeHubClient/Pages/Anime/AnimeUpsert.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeUpsert.razor
@@ -162,13 +162,27 @@ else
                     </div>
 
                     <div class="row mt-3">
-                        <div class="col-6 col-md-3">
-                            <MudButton ButtonType="ButtonType.Submit" StartIcon="@Icons.Material.Filled.LibraryAddCheck" Variant="Variant.Filled" Color="Color.Primary" Disabled="@IsLoading">@(Id > 0 ? "Update" : "Create")</MudButton>
-                        </div>
-                        <div class="col-6 col-md-3">
-                            <MudButton Href="anime" StartIcon="@Icons.Material.Filled.ArrowCircleLeft" Variant="Variant.Filled" Color="Color.Default" Disabled="@IsLoading">Back to List</MudButton>
+                        <div class="col-12 d-flex justify-content-around gap-5">
+                            <MudButton ButtonType="ButtonType.Submit"
+                                       StartIcon="@Icons.Material.Filled.LibraryAddCheck"
+                                       Variant="Variant.Filled"
+                                       Color="Color.Primary"
+                                       FullWidth="true"
+                                       Disabled="@IsLoading">
+                                @(Id > 0 ? "Update" : "Create")
+                            </MudButton>
+                            <MudSpacer/>
+                            <MudButton Href="anime"
+                                       StartIcon="@Icons.Material.Filled.ArrowCircleLeft"
+                                       Variant="Variant.Filled"
+                                       Color="Color.Default"
+                                       FullWidth="true"
+                                       Disabled="@IsLoading">
+                                Back to List
+                            </MudButton>
                         </div>
                     </div>
+
                 </div>
             </EditForm>
         </div>
