--- a/AnimeHubClient/Pages/Category/CategoryUpsert.razor
+++ b/AnimeHubClient/Pages/Category/CategoryUpsert.razor
@@ -31,11 +31,10 @@ else
                         <ValidationMessage For="@(() => Category.Name)"></ValidationMessage>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-6 col-md-3">
-                            <MudButton ButtonType="ButtonType.Submit" StartIcon="@Icons.Material.Filled.LibraryAddCheck" Variant="Variant.Filled" Color="Color.Primary" Disabled="@IsLoading">@(Id > 0 ? "Update" : "Create")</MudButton>
-                        </div>
-                        <div class="col-6 col-md-3">
-                            <MudButton Href="category" StartIcon="@Icons.Material.Filled.ArrowCircleLeft" Variant="Variant.Filled" Color="Color.Default" Disabled="@IsLoading">Back to List</MudButton>
+                        <div class="col-12 d-flex justify-content-around gap-5">
+                            <MudButton ButtonType="ButtonType.Submit" StartIcon="@Icons.Material.Filled.LibraryAddCheck" Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" Disabled="@IsLoading">@(Id > 0 ? "Update" : "Create")</MudButton>
+                            <MudSpacer />
+                            <MudButton Href="category" StartIcon="@Icons.Material.Filled.ArrowCircleLeft" Variant="Variant.Filled" Color="Color.Default" FullWidth="true" Disabled="@IsLoading">Back to List</MudButton>
                         </div>
                     </div>
                 </div>
